<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="movie"
            type="com.example.crud.movies.Movie" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="12dp"
        tools:context=".movies.BaseAddEditMovieActivity">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/movie_id"
            android:textColor="@color/text_color_black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/movie_id_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:text="@{movie.moviesId}"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/movie_name"
            android:textColor="@color/text_color_black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/movie_name_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:text="@{movie.title}"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:text="@string/series"
            android:textColor="@color/text_color_black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/series_items_sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/image_url"
            android:textColor="@color/text_color_black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/image_url_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:text="@{movie.imageUrl}"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/description"
            android:textColor="@color/text_color_black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/description_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:text="@{movie.description}"
            android:inputType="textPersonName" />

    </LinearLayout>
</layout>