<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="message"
            type="com.example.crud.messages.Message" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="12dp"
        android:paddingTop="12dp"
        android:paddingRight="12dp"
        android:paddingBottom="4dp"
        tools:context=".messages.BaseAddEditMessageActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/text_color_black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/name_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:text="@{message.name}"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="@string/phone_number"
                android:textColor="@color/text_color_black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/phone_number_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:text="@{message.phoneNumber}"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="@string/message"
                android:textColor="@color/text_color_black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/message_text_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:ems="10"
                android:text="@{message.messageText}"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:maxLines="5" />

        </LinearLayout>

    </LinearLayout>
</layout>